kubernetes/hello_srv.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: NodePort
  selector:
    app: hello-app
  ports:
    - protocol: TCP
      nodePort: 30163
      port: 80
      targetPort: 5000
