kubernetes/hola_srv.yml
apiVersion: v1
kind: Service
metadata:
  name: hola-service
spec:
  selector:
    app: hola-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
